# Dotfiles

./: .zshrc  pkglist-repo.txt  spotlight-dark.rasi
Thunar/: accels.scm  renamerrc  uca.xml
Zenkit/: Cookies  Network Persistent State  TransportSecurity  config.json
Zenkit/Crashpad/: client_id
Zenkit/DawnCache/: data_1  index
Zenkit/GPUCache/: data_0  data_1  data_2  index
Zenkit/Session Storage/: LOG  (+1 more)
btop/: btop.conf
cava/: config
dconf/: user
gtk-3.0/: bookmarks  settings.ini  settings.sync-conflict-20240911-172640-NUQQGT2.ini
hypr/: hypridle.conf  hyprland.lua  hyprlock.conf  initial-boot.sh  typescript
hyprpanel/: config.json
kitty/: kitty.conf
neofetch/: config.conf
noctalia/: colors.json  plugins.json  settings.json  settings.json.bak  zmk_battery.sh
noctalia/plugins/844fd1:google-todo/backend/: Cargo.toml
noctalia/plugins/844fd1:google-todo/backend/src/: main.rs
nvim/: init.vim  lazy-lock.json  lazyvim.json
oldnvimconfig/: init.vim
pulse/: cookie
qt5ct/: qt5ct.conf
qt6ct/: qt6ct.conf
rofi/: .current_wallpaper  config-compact.rasi  config.rasi
spicetify/: config-xpui.ini
vlc/: vlc-qt-interface.conf  vlcrc
waybar/: config  modules  modules.json  style.css
wlogout/: layout  style.css
xsettingsd/: xsettingsd.conf
zed/: .tmp0Tsan5  .tmpIFHYLh  .tmpN5PH2W  .tmpP98aBo  .tmpQ1TURF  .tmpQa3hWu  .tmpVoi7dn  .tmpXSOdyf  .tmpXYE5BP  .tmpfop0a4  .tmpgFow7J  .tmpjtk48x  .tmpkxsxtA  .tmpoOaARx  .tmpp3LFrb  .tmpq8u0Su  .tmpqIBJUg  .tmptcQJiA  .tmpw24RmE  keymap.json  keymap_backup.json  settings.json  settings_backup.json
(+823 files in other folders)
