[package]
name = "google-todo-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
webbrowser = "1.0"
tiny_http = "0.12"
url = "2.5"
